--- a/PinPadExample/PinPad/PPPinPadViewController.xib
+++ b/PinPadExample/PinPad/PPPinPadViewController.xib
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5037" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PPPinPadViewController">
             <connections>
                 <outlet property="_errorView" destination="W6s-FL-Wlt" id="hc8-Gp-bqS"/>
                 <outlet property="_pinCirclesView" destination="4Yk-SY-2mC" id="gML-ui-4mc"/>
+                <outlet property="backgroundImageView" destination="DOH-Ll-zdT" id="5Qc-vw-6bk"/>
+                <outlet property="cancelButton" destination="kc3-v6-c4F" id="alf-Nu-dhu"/>
+                <outlet property="pinErrorLabel" destination="H0h-cW-3Em" id="imp-cS-6QW"/>
+                <outlet property="pinLabel" destination="w5c-2k-tj7" id="o1v-Kh-8Of"/>
+                <outlet property="resetButton" destination="oEN-t6-Qmh" id="1jv-VY-1js"/>
                 <outlet property="view" destination="D15-4a-Y1q" id="9PI-BN-WuE"/>
             </connections>
         </placeholder>
@@ -183,9 +189,10 @@
                     <rect key="frame" x="0.0" y="441" width="320" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kc3-v6-c4F">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kc3-v6-c4F">
                             <rect key="frame" x="20" y="1" width="80" height="36"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="Cancel">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -193,9 +200,10 @@
                                 <action selector="cancelClick:" destination="-1" eventType="touchUpInside" id="Hmx-0E-eLo"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEN-t6-Qmh">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEN-t6-Qmh">
                             <rect key="frame" x="220" y="1" width="80" height="36"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="Reset">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
